# test_code_XXCQ

./: .gitignore  README.md
3d_model_test/: export_test.glb  model.gltf  text_chao_chordalr0.050_m4.mtl
boost_test/: CMakeLists.txt
boost_test/helloworld/: CMakeLists.txt
boost_test/program_options/: CMakeLists.txt  program_options.cpp
boost_test/uuid_test/: CMakeLists.txt  uuid_test.cpp
ceres_solver_test/bundle_adjuster/: CMakeLists.txt  README.md
ceres_solver_test/helloworld/: CMakeLists.txt  helloworld.cc
cgal_test/: README.md
cgal_test/3dconvexhull/: 3dconvexhull.cpp  CMakeLists.txt  CMakeLists.txt.bak
cgal_test/3dconvexhull/data/: cube_hull.off
cgal_test/cgal_version/: CMakeLists.txt  check_version.cpp
cgal_test/data/: bunny_hull.off
cgal_test/delaunay_2d/: CMakeLists.txt  delaunay_2d.cpp
cmake_test/helloworld/: CMakeLists.txt  README.md  hello_world.cpp
cmake_test/project_library/: CMakeLists.txt  README.md
cmake_test/project_library/src/: CMakeLists.txt  hello.cpp  hello.h
cmake_test/project_template/: CMakeLists.txt  README.md
cmake_test/project_template/doc/: hello.txt
cmake_test/project_template/src/: CMakeLists.txt
cmake_test/project_use_library/: CMakeLists.txt  README.md
cmake_test/project_use_library/cmake/: FindHello.cmake
cmake_test/project_use_library/src/: CMakeLists.txt  main.cpp
common/: tools.h
cpp_test/: CMakeLists.txt  cpp_test.sln
cpp_test/function_pointer/: CMakeLists.txt  function_pointer.cpp  function_pointer.vcxproj  function_pointer.vcxproj.filters  function_pointers.cpp
cpp_test/smart_pointer/: CMakeLists.txt  smart_pointer.cpp  smart_pointer.vcxproj  smart_pointer.vcxproj.filters
cpp_test/smart_pointers/: smart_pointers.cpp  smart_pointers.vcxproj  smart_pointers.vcxproj.filters
cpp_test/thread_mutex/: CMakeLists.txt  thread_mutex.cpp  thread_mutex.vcxproj  thread_mutex.vcxproj.filters
cuda_test/: README.md
cuda_test/image_processing/: CMakeLists.txt  image_processing.cu  image_processing.h  main.cpp  simple.h
cuda_test/matrix_multiply/: .tags  CMakeLists.txt  matrix_mul_cublas.cu
cuda_test/simple/: CMakeLists.txt  simple_add.cu
design_patterns/: design_patterns.sln
design_patterns/decorator/: decorator.h  decorator.vcxproj  decorator.vcxproj.filters  main.cpp
design_patterns/design_patterns/: ClassDiagram.cd  decorator.h  design_patterns.vcxproj  design_patterns.vcxproj.filters  main.cpp
eigen_test/: CMakeLists.txt  eigen_test.cpp
glfw_test/hello_triangle/: Makefile.linux  glad.cpp  hello_triangle.cpp
glfw_test/hello_window/: Makefile.linux
glfw_test/shaders/: Makefile.linux
linux_test/: setup_env.sh
myheap/: CMakeLists.txt  main.cpp  myheap.h
opencv_test/: .tags  CMakeLists.txt  README.md
opencv_test/3d_mat/: 3d_mat.cpp  CMakeLists.txt
opencv_test/camera_calibration/: CMakeLists.txt  VID5.xml  camera_calibration.cpp  in_VID5.xml
opencv_test/depth_to_pointcloud/: CMakeLists.txt  depth_to_pointcloud.cpp
opencv_test/encode_decode/: CMakeLists.txt  encode_decode.cpp
opencv_test/gen_pure_teximages/: CMakeLists.txt  gen_pure_teximages.cpp
opencv_test/image_basic/: CMakeLists.txt  image_basic.cpp
opencv_test/image_convolution/: CMakeLists.txt  image_convolution.cpp
opencv_test/image_flip/: CMakeLists.txt  image_flip.cpp
opencv_test/image_moments/: CMakeLists.txt  moments_demo.cpp
opencv_test/image_rotation/: CMakeLists.txt  image_rotation.cpp
opencv_test/mat_operation/: CMakeLists.txt  mat_operation.cpp
opencv_test/multi_thread/: CMakeLists.txt  multi_thread.cpp
opencv_test/openni_test/: CMakeLists.txt
opengl_test/: Readme_opengl_notes.md
opengl_test/displayList/: Makefile.linux
opengl_test/glad/: glad.c
opengl_test/glad.c.4.1/: glad.c
opengl_test/hello_texture/: CMakeLists.txt  main.cpp  shader.frag  shader.h  shader.vert  stb_image_wrap.cpp
opengl_test/hello_triangle/: CMakeLists.txt  main.cpp
opengl_test/hello_window/: CMakeLists.txt  main.cpp
opengl_test/matrix/: Makefile.linux
opengl_test/matrixModelView/: Makefile.linux
opengl_test/my_shader_template/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
opengl_test/opengl_transformation/: CMakeLists.txt  README.md  camera.h  main.cpp  shader.frag  shader.h
opengl_test/test/: CMakeLists.txt  main.cpp
opengl_test/vbo/: Makefile.linux
opengl_test/vboSimple/: Makefile.linux
openmp_test/: CMakeLists.txt  main.cpp
pangolin_test/: CMakeLists.txt  main.cpp  print_in_color.h  rgbd_processor.cpp  rgbd_processor.h
pangolin_test/rgbdparser/: CMakeLists.txt  rgbdparser.cpp
pcl_test/point_cloud/: CMakeLists.txt  main.cpp
python_test/: README.md  basic.py  demo_convert_images.py  demo_convert_png_to_jpg.py  fetch_image.py  frame-000000.color.ppm  mesh_viewer.py  open_model.py  pointcloud_viewer.py  rgbd_jpg_png_to_ppm_pgm.py  rgbd_ppm_pgm_to_jpg_png.py  rgbd_viewer.py  test_plot.py
python_test/image_merging/: demo_merge_images.py  merge_image_side.py
python_test/test_data/: apt-test.ply  camera_intrinsic_iphone.json  frame-000000.depth.pgm  lucy14_000_denoise.ply  lucy14_000_pc.ply
python_test/tum_rgbd/: associate.py  copy_tum.py  generate_groundtruth.py
pytorch_study/chapter10_cnn_resnet/: cnn.py  lenet5.py  main.py
pytorch_study/chapter11_rnn_lstm/: lstm_custom_dataset.ipynb  lstm_custom_dataset.py  requirements.txt
pytorch_study/chapter13_pokemon_custom_dataset/: pokemon.py  resnet18.py  tensorboard_utils.py  train.py
pytorch_study/chapter7_multi_classification/: MNIST_classification_CPU.ipynb  MNIST_classification_CPU_nn_Module.ipynb  MNIST_classification_first.ipynb  MNIST_classification_nn_Module.ipynb  MNIST_classification_nn_Module_GPU.ipynb  MNIST_classification_nn_Module_GPU_tensorboard.ipynb
script_test/: sort-dir-by-size.sh
slam_book/ch5_stitching_RGBD_pointcloud/: CMakeLists.txt  main.cpp
slam_book/ch6_ceres/: CMakeLists.txt  curve.eps  gnuplot_curve.p  main.cpp
slam_book/ch6_g2o/: CMakeLists.txt  main.cpp
slam_book/ch7_vo_g2o/: CMakeLists.txt  g2o_vo_3df2d.cpp  main.cpp
sophus_test/use_sophus/: CMakeLists.txt  main.cpp
(+27 files in other folders)
